inou/prp/tests/errors/overflow_signed.prp
/*
:name: overflow_signed
:type: error
:error: does not fit
*/

// A comptime value that exceeds a SIGNED type's declared range is a compile error.
// Doc: ../docs/docs/pyrope/04-variables.md  `c = a // error: 100 overflows the maximum value of 'c'`
// The unsigned counterpart is pinned in overflow_unsigned.prp.

const x:s4 = 200
